# NDArray

./: CMakeLists.txt  README.md
Include/: ndarray.hpp
NDArray/: ndarray.hpp
NDArray/core/: ndarray.hpp
Testbed/: CMakeLists.txt  main.cpp
